# slicer

./: .gitignore  Cargo.toml  LICENSE  config.json  config.yml  go.mod  go.sum  main.go  readme.md  release.sh  slicer.py  storage.md
.github/: FUNDING.yml
.github/workflows/: release.yml
config/: config.go
extractor/: extractor.go  skipExtensions.go
output/: output.go
src/: main.go  main.rs  main.rs.bak
src/config/: config.go
src/output/: output.go
