[package]
name = "Slicer"
version = "2.0.0"
authors = ["mzfr <hello@mzfr.me>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
description = "Automate the boring part of APK recon"
homepage = "https://github.com/mzfr/slicer/"
documentation = "https://github.com/mzfr/slicer/issues/36"
repository = "https://github.com/mzfr/slicer/issues/36"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
quick-xml = "0.22.0"
roxmltree = "0.14.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
quickxml_to_serde = "0.4.1"
serde_json = "1.0"
serde_derive = "1.0"
